# ccweb

./: CNAME  README.md  index.html  llms.txt  pyproject.toml
assets/: app.js
scripts/: diagnose.sh  session-start.sh  setup.sh
src/ccw/: cli.py  sections.py
