[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccweb"
version = "0.1.0"
description = "Bootstrap Claude Code web environments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Andrei Nicolae" }]
keywords = ["claude", "claude-code", "devtools", "setup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ccw"]

[project.scripts]
ccweb = "ccw.cli:main"

[project.urls]
Homepage = "https://ccweb.nicolaeandrei.com"
Repository = "https://github.com/nclandrei/ccw"
